--- a/project/package.json
+++ b/project/package.json
@@ -9,21 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.1",
     "@react-native-firebase/app": "^21.11.0",
     "@react-native-firebase/firestore": "^21.11.0",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
+    "dotenv": "^16.4.7",
     "expo": "~52.0.36",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.3.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-star-rating-widget": "^1.9.2",
+    "react-native-svg": "^15.11.2",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@expo/metro-runtime": "^4.0.1"
   },
   "private": true
 }
