--- a/project/package.json
+++ b/project/package.json
@@ -14,8 +14,10 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
-    "dotenv": "^16.4.7",
     "expo": "~52.0.36",
+    "expo-constants": "~17.0.7",
+    "expo-doctor": "^1.12.7",
+    "expo-env": "^1.1.1",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.3.1",
     "react": "18.3.1",
