--- a/project/package.json
+++ b/project/package.json
@@ -26,12 +26,12 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-star-rating-widget": "^1.9.2",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@expo/metro-runtime": "^4.0.1"
+    "@babel/core": "^7.25.2",
+    "@expo/metro-runtime": "~4.0.1"
   },
   "private": true
 }
