--- a/project/package.json
+++ b/project/package.json
@@ -14,15 +14,18 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
+    "axios": "^1.8.2",
     "expo": "~52.0.36",
     "expo-constants": "~17.0.7",
     "expo-doctor": "^1.12.7",
     "expo-env": "^1.1.1",
+    "expo-location": "^18.0.7",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.3.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-maps": "^1.20.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-star-rating-widget": "^1.9.2",
